@@ -55,6 +55,9 @@ fwknop-2.0.4 (11//2012):
     - [client+server] Added --disable-gpg to the autoconf ./configure script
       via configure.ac.  This makes it easy to not have fwknop/fwknopd
       link against libgpgme even if it is installed on the local system.
+    - [test suite] For GnuPG tests that require a passphrase associated with
+      a gpg key, added a pinentry check to see if the local gpg engine
+      requires it.  If so, the gpg test that require a key are excluded since.
 
 fwknop-2.0.3 (09/03/2012):
     - [server] Fernando Arnaboldi from IOActive found several DoS/code
